Started design work for members listing page. Added macro to handle everything necessary for cropped images to be handled correctly for retina. (otherwise you can get images of the incorrect aspect ratio). Replaced all image outputs so far to use it. Added promo image title in template fields because bolt doesn't appear to expose the title attribute in template fields.

--- a/theme/mindcrack/assets/stylesheets/style.scss
+++ b/theme/mindcrack/assets/stylesheets/style.scss
@@ -899,6 +899,32 @@ section#latest-news {
 	@extend .news-list;
 }
 
+article.member-list {
+	@include make-col();
+	@include make-col-span(3);
+
+	.member-thumb {
+		width: 100%;
+		img {
+			width: 100%;
+		}
+	}
+}
+
+.member-row-2 {
+	@include media-breakpoint-down(sm) {
+		@include make-row();
+
+		article.member-list {
+			@include make-col-span(6);
+		}
+	}
+}
+
+.member-row-4 {
+	@include make-row();
+}
+
 // Less than ideal non-flex solutions for older IE
 .lt-ie10 {
 	.about-panel-stat-line .container{
